// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FolderSurveySelector Tests +++ checks if a survey is selected when options is clicked 1`] = `
<div>
  <div>
    <select
      data-testid="folder-survey-select-0"
    >
      <option
        value="0"
      >
        Choose folder or survey
      </option>
      <option
        value="153142013"
      >
        Folder with a few large data sets
      </option>
    </select>
    <select
      data-testid="folder-survey-select-1"
    >
      <option
        value="0"
      >
        Choose folder or survey
      </option>
      <option
        value="152342023"
      >
        BAR-handpump
      </option>
      <option
        value="148412306"
      >
        NR-handpump
      </option>
    </select>
  </div>
</div>
`;

exports[`FolderSurveySelector Tests +++ renders <snapshot> 1`] = `
<div>
  <div>
    <select
      data-testid="folder-survey-select-0"
    >
      <option
        value="0"
      >
        Choose folder or survey
      </option>
      <option
        value="153142013"
      >
        Folder with a few large data sets
      </option>
    </select>
  </div>
</div>
`;
